# chronicler

./: .gitignore  LICENSE  README.md  pyproject.toml
chronicler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
chronicler/cli/: main.py
chronicler/config/: settings.py
chronicler/core/: context.py  daemon.py  debouncer.py  differ.py  watcher.py
chronicler/llm/: classifier.py  client.py  prompts.py
chronicler/stack/: __init__.py  enricher.py  extractor.py  renderer.py  schema.py  staleness.py
chronicler/storage/: db.py  map.py  schema.py
chronicler/ui/: server.py
chronicler/ui/static/: index.html
docs/superpowers/plans/: 2026-03-26-chronicler-ui.md  2026-04-04-tech-stack-sheet.md
docs/superpowers/specs/: 2026-03-26-chronicler-ui-design.md  2026-04-04-tech-stack-sheet-design.md
tests/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_context.py  test_daemon.py  test_db.py  test_debouncer.py  test_differ.py  test_map.py  test_schema.py  test_ui_server.py  test_watcher.py
tests/stack/: test_extractor.py  test_renderer.py  test_staleness.py
